--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "ext-openssl": "*",
     "phpseclib/phpseclib": "^2.0.31|^3.0.7",
     "psr/log": "^1.1|^2|^3",
+    "squizlabs/php_codesniffer": "^3.6",
     "symfony/config": "^5.4|^6.0",
     "symfony/dependency-injection": "^5.4|^6.0",
     "symfony/http-foundation": "^5.4|^6.0",
